Cleanup and documentation. Remove unnecessary escaping. Additional note about ENV vars. Remove Ruby 1.8 dependency for gomate.

--- a/info.plist
+++ b/info.plist
@@ -7,7 +7,7 @@
 	<key>contactName</key>
 	<string>syscrusher</string>
 	<key>description</key>
-	<string>Support for the &lt;a href=&quot;http://golang.org&quot;&gt;Go programming language&lt;/a&gt;.</string>
+	<string>Support for the <a href="http://golang.org"> Go programming language</a>.</string>
 	<key>mainMenu</key>
 	<dict>
 		<key>excludedItems</key>
