Clean up gomate.rb
- removed gofmt from gomates.rb
- removed goimports from gomates.rb
- altered Imports to use bash command
- added script to set GOPATH for bash commands
- fixed package awareness bug when using goimports for gofmt

--- a/info.plist
+++ b/info.plist
@@ -7,7 +7,7 @@
 	<key>contactName</key>
 	<string>syscrusher</string>
 	<key>description</key>
-	<string>Support for the &lt;a href=&quot;http://golang.org&quot;&gt;Go programming language&lt;/a&gt;.</string>
+	<string>Support for the &lt;a href="http://golang.org"&gt;Go programming language&lt;/a&gt;.</string>
 	<key>mainMenu</key>
 	<dict>
 		<key>excludedItems</key>
