--- a/info.plist
+++ b/info.plist
@@ -23,6 +23,7 @@
 			<string>------------------------------------</string>
 			<string>D3CD6B51-3A7E-4356-85F4-B76B8336BEF2</string>
 			<string>7BCFCFC8-9152-4638-8436-E17B0C754C8D</string>
+			<string>A04DD936-EEB1-484E-BF47-98BD6709D00C</string>
 			<string>------------------------------------</string>
 			<string>B0271A46-F6EF-4D2F-95A6-EC067E69155C</string>
 			<string>5509FB1E-C780-44ED-8BCF-4300ABC30C32</string>
