--- a/info.plist
+++ b/info.plist
@@ -28,6 +28,7 @@
 			<string>B0271A46-F6EF-4D2F-95A6-EC067E69155C</string>
 			<string>5509FB1E-C780-44ED-8BCF-4300ABC30C32</string>
 			<string>7E52594B-80CA-4EDD-B2B8-C54EB3844E95</string>
+			<string>B09B40EA-FF74-425E-BE7F-A892077CC1F8</string>
 			<string>72CC95BA-C5CA-4D39-A7E6-9533B33B9979</string>
 			<string>------------------------------------</string>
 			<string>C64599DA-E362-4411-9782-58A9C7F1B05A</string>
