Add basic help command. Recommended by StyleGuide. Doesn't include commands and snippets because the documentation currently uses GitHub syntax for tables, which TextMate doesn't render well.

--- a/info.plist
+++ b/info.plist
@@ -37,6 +37,8 @@
 			<string>4BE04FFA-DF1F-4A48-BAF6-6711544ECAC9</string>
 			<string>25CE5652-3DF2-478F-820B-965F6F7F57A4</string>
 			<string>C2D3D065-3434-4AC0-BB50-5D8676052D1F</string>
+			<string>------------------------------------</string>
+			<string>98F0F28C-3B03-4792-AF44-24E2C4327EED</string>
 		</array>
 		<key>submenus</key>
 		<dict>
