--- a/info.plist
+++ b/info.plist
@@ -39,6 +39,12 @@
 			<string>25CE5652-3DF2-478F-820B-965F6F7F57A4</string>
 			<string>C2D3D065-3434-4AC0-BB50-5D8676052D1F</string>
 			<string>------------------------------------</string>
+			<string>36773731-D5AC-49F4-938C-08EFC7C042D8</string>
+			<string>5CAB3BF3-E841-43DB-9A5E-B1BA61B2604E</string>
+			<string>639324A9-89F9-414A-9340-3316966D87A5</string>
+			<string>96924418-0F77-4085-BBA1-194A51EC2880</string>
+			<string>3EA461FE-2FDE-43EF-86DE-F11258319F4E</string>
+			<string>------------------------------------</string>
 			<string>98F0F28C-3B03-4792-AF44-24E2C4327EED</string>
 		</array>
 		<key>submenus</key>
